# shennongname

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pytest.ini
docs/: README.md  _sidebar.md  index.html
docs/en/: README.md  _navbar.md  _sidebar.md  snnmm.md  snnmma.md
docs/zh/: README.md  _sidebar.md  snnmm.md  snnmma.md
shennongname/flask/: config.py
shennongname/lang/: lang.py
shennongname/lang/locale/zh/LC_MESSAGES/: messages.mo
shennongname/snnmma/: model.py
src/shennongname/flask/: run.py
src/shennongname/flask/blueprint/: snn.py
src/shennongname/lang/locale/zh/LC_MESSAGES/: messages.po
src/shennongname/snnmma/: algorithm.py
src/shennongname/utils/: sp2000_china.py
test/test_flask/test_blueprint/: test_snn.py
tests/test_snnmma/: test_algorithm.py
tests/test_utils/: test_sp2000_china.py
