[project]
name = "shennongname"
version = "1.1.0"
description = "ShennongName (神农命名)"
readme = "README.md"
authors = [{ name = "YANG Zijie", email = "yangzijie@westlake.edu.cn" }]
requires-python = ">=3.11"
dependencies = [
    "pypinyin>=0.49.0,<0.50.0",
    "flask>=3.0.0,<4.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pandas>=2.1.1,<3.0.0",
    "gunicorn>=21.2.0,<22.0.0",
]

[project.scripts]
shennongname = "shennongname:main"

[dependency-groups]
dev = ["pytest>=7.4.3,<8.0.0"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
